Shifted portrait / landscape cutoff to prevent jump to landscape when keyboard is opened

--- a/css/author.scss
+++ b/css/author.scss
@@ -270,7 +270,7 @@
 }
 
 //Portait only rules
-@media only screen and (max-width: 1100px ) and ( max-aspect-ratio: 4/3 )
+@media only screen and (max-width: 1100px ) and ( max-aspect-ratio: 6/4 )
 {
     //Landscape has enough horizontal space for the right margin
     .posts {
